--- a/index.html
+++ b/index.html
@@ -16,41 +16,27 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg stick-top navbar-light bg-dark">
-        <a class="navbar-brand bg-white" href="#">
-            <img src="https://mrcaspento.github.io/PictureGarden/Pictures/Profile.png" alt="Me" height="30" width="30"
-                class="img-thumbnail" class="d-inline-block align-top" alt="" loading="lazy">
-            <a class="navbar-brand position-sticky" href="#">Get to Know me</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Link</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            Dropdown
-                        </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="#">Action</a>
-                            <a class="dropdown-item" href="#">Another action</a>
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="#">Something else here</a>
-                        </div>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-                    </li>
-                </ul>
-
-            </div>
+    <!-- Image and text -->
+    <nav class="navbar navbar-light bg-dark">
+        <a class="navbar-brand" href="#">
+            <img src="C:\Users\mrcas\Pictures\Profile Pics\Selfie.jpg" width="30" height="30"
+                class="d-inline-block align-top text-white" alt="" loading="lazy">
+            About Me
+        </a>
+        <ul class="nav nav-pills">
+            <li class="nav-item">
+              <a class="nav-link active text-white" href="#">Active</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-white" href="#">Contact</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-white" href="#">Portfolio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+            </li>
+          </ul>
+        </div>
     </nav>
 </body>
