--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
                 class="d-inline-block align-top text-white" alt="" loading="lazy">
             About Me
         </a>
-        <ul class="nav nav-pills">
+        <ul class="nav nav-pills stickytop">
             <li class="nav-item">
-              <a class="nav-link active text-white" href="#">Active</a>
+              <a class="nav-link text-white" href="#">Active</a>
             </li>
             <li class="nav-item">
               <a class="nav-link text-white" href="#">Contact</a>
@@ -34,7 +34,7 @@
               <a class="nav-link text-white" href="#">Portfolio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+              <a class="nav-link text-white" href="">Memes</a>
             </li>
           </ul>
         </div>
