--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
               <a class="nav-link text-white" href="#">Active</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white" href="#">Contact</a>
+              <a class="nav-link text-white" href="contact.html">Contact</a>
             </li>
             <li class="nav-item">
               <a class="nav-link text-white" href="#">Portfolio</a>
