--- a/aboutme.html
+++ b/aboutme.html
@@ -43,18 +43,17 @@
     <div class="container-fluid">
         <div class="container">
 
-            <h1 class="row">About me</h1>
+            <h1 class="row">Biography</h1>
             <div class="row">
                 <div class="card mb-3" style="max-width: 540px;">
                     <div class="row no-gutters">
                         <div class="col-md-4">
-                            <img src="#" class="card-img" alt="#">
+                            <img src="C:\Users\mrcas\Pictures\Profile Pics\Profile.jpg" class="card-img" alt="#">
                         </div>
                         <div class="col-md-8">
                             <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
-                                <p class="card-text">This is a wider card with supporting text below as a natural
-                                    lead-in to additional content. This content is a little bit longer.</p>
+                                <h5 class="card-title">Matthew Caspento</h5>
+                                <p class="card-text">Born in Newark, NJ in 1994.I lived there for 5 years before my parents decided to move my twin sister and me to South Carolina looking for a better life, or avoid paying higher taxes. </p>
                                 <p class="card-text"><small class="text-muted"></small></p>
                             </div>
                         </div>
@@ -67,6 +66,15 @@
                     voluptatum
                     necessitatibus unde tempora sed neque!
                 </div>
+                <section id="contact-info">
+                    <h2>Contact Info</h2>
+                    <ul>
+                        <li><strong>Email:</strong> <a href="Mrcaspento@gmail.com">Mrcaspento@gmail.com</a></li>
+                        <li><strong>Github:</strong> <a href="https://mrcaspento.github.io/">Mrcaspento.github.io</a></li>
+                        <li><strong>Portfolio:</strong> <a href="#">coming soon</a></li>
+                    </ul>
+                </section>
+
             </div>
         </div>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
