--- a/index.html
+++ b/index.html
@@ -38,11 +38,20 @@
         <li class="nav-item">
           <a class="nav-link" href="portfolio.html">Portfolio</a>
         </li>
-
       </ul>
     </div>
     </div>
   </nav>
+
+  <div class="jumbotron jumbotron-fluid">
+    <div class="container-fluid"> 
+      <h1 class="display-4">Hello, world!</h1>
+      <p class="lead">This is my work in progress website where I upload my class projects and the occasional meme</p>
+      <hr class="my-4">
+      <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+      <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+    </div>
+  </div>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
     integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
     crossorigin="anonymous"></script>
