--- a/aboutme.html
+++ b/aboutme.html
@@ -53,25 +53,30 @@
                         <div class="col-md-8">
                             <div class="card-body">
                                 <h5 class="card-title">Matthew Caspento</h5>
-                                <p class="card-text">Born in Newark, NJ in 1994.I lived there for 5 years before my parents decided to move my twin sister and me to South Carolina looking for a better life, or avoid paying higher taxes. </p>
+                                <p class="card-text">Born in Newark, NJ in 1994.I lived there for 5 years before my parents decided to move my twin sister and me to South Carolina looking for a better life, or avoid paying higher taxes. Grew up in Myrtle Beach, Sc and went to Coastal Carolina Unversity for Biochemistery until 2018 where I moved to Charlotte, NC and decided to become a bar manager. Where I also had a pop-up bars in Charlotte at the Discovery Place  </p>
                                 <p class="card-text"><small class="text-muted"></small></p>
                             </div>
                         </div>
                     </div>
                 </div>
 
-                <div class="col-md-3">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rem labore similique
-                    sit?
-                    Velit, placeat ad. Culpa quibusdam enim consequatur, corporis rerum error ipsum voluptates
-                    voluptatum
-                    necessitatibus unde tempora sed neque!
+                <div class="col-md-3">
+                  <h2>Accolades</h2>
+                  <ul>
+                      <li>Crowned Best person to have your back in a Brawl vs. Bears with Knifes </li>
+                      <li>"200" upvotes on a reddit post</li>
+                      <li>Has not died yet</li>
+                      <li>Spent 6 years in college</li>
+                      <li>Bought a 3 peice-sectional couch</li>
+                  </ul> 
+                  
                 </div>
                 <section id="contact-info">
                     <h2>Contact Info</h2>
                     <ul>
                         <li><strong>Email:</strong> <a href="Mrcaspento@gmail.com">Mrcaspento@gmail.com</a></li>
                         <li><strong>Github:</strong> <a href="https://mrcaspento.github.io/">Mrcaspento.github.io</a></li>
-                        <li><strong>Portfolio:</strong> <a href="#">coming soon</a></li>
+                        <li><strong>Pop-bar link:</strong> <a href="https://qclife.wbtv.com/discovery-place-fishbowl/" class="badge badge-primary">Click here</a></li>
                     </ul>
                 </section>
 
@@ -91,7 +96,7 @@
         <div class="sticky-footer">
             <h2>Made with Bootstrap</h2>
             <p>
-                &copy; 2019 Horiseon Social Solution Services, Inc.
+                &copy; 2020 Meme Maker, Inc.
             </p>
         </div>
 </body>
