--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@
   </nav>
 
   <div class="jumbotron jumbotron-fluid">
-    <div class="container-fluid"> 
+    <div class="container-fluid">
       <h1 class="display-4">Hello, world!</h1>
       <p class="lead">This is my work in progress website where I upload my class projects and the occasional meme</p>
       <hr class="my-4">
-      <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
-      <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+      <p>For the Juicy Memes.</p>
+      <a class="btn btn-primary btn-md" href="Memes.htmlS" role="button">Memes</a>
     </div>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
@@ -62,4 +62,10 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"
     integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
     crossorigin="anonymous"></script>
+  <div class="sticky-footer">
+    <h2>Made with Bootstrap</h2>
+    <p>
+      &copy; 2020 Meme Maker, Inc.
+    </p>
+  </div>
 </body>
