working on grid

--- a/Memes.html
+++ b/Memes.html
@@ -35,7 +35,7 @@
                 <li class="nav-item">
                     <a class="nav-link" href="aboutme.html">AboutMe</a>
                 </li>
-                <li class="nav-item active">
+                <li class="nav-item ">
                     <a class="nav-link" href="portfolio.html">Portfolio</a>
                 </li>
             </ul>
@@ -45,13 +45,16 @@
         <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="..." class="d-block w-100" alt="...">
+                    <img src="C:\Users\mrcas\Pictures\Photoshop\spongebob.jpg" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                    <img src="..." class="d-block w-100" alt="...">
+                    <img src="C:\Users\mrcas\Pictures\Photoshop\meme 1.jpg" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                    <img src="..." class="d-block w-100" alt="...">
+                    <img src="C:\Users\mrcas\Pictures\Photoshop\meme 2.jpg" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="C:\Users\mrcas\Pictures\Photoshop\meme 3.jpg" class="d-block w-100" alt="...">
                 </div>
             </div>
             <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
