--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <p class="lead">This is my work in progress website where I upload my class projects and the occasional meme</p>
       <hr class="my-4">
       <p>For the Juicy Memes.</p>
-      <a class="btn btn-primary btn-md" href="Memes.htmlS" role="button">Memes</a>
+      <a class="btn btn-primary btn-md" href="Memes.html" role="button">Memes</a>
     </div>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
