--- a/aboutme.html
+++ b/aboutme.html
@@ -53,7 +53,7 @@
                         <div class="col-md-8">
                             <div class="card-body">
                                 <h5 class="card-title">Matthew Caspento</h5>
-                                <p class="card-text">Born in Newark, NJ in 1994.I lived there for 5 years before my parents decided to move my twin sister and me to South Carolina looking for a better life, or avoid paying higher taxes. Grew up in Myrtle Beach, Sc and went to Coastal Carolina Unversity for Biochemistery until 2018 where I moved to Charlotte, NC and decided to become a bar manager. Where I also had a pop-up bars in Charlotte at the Discovery Place  </p>
+                                <p class="card-text">Born in Newark, NJ in 1994.I lived there for 5 years before my parents decided to move my twin sister and me to South Carolina looking for a better life, or avoid paying higher taxes. Grew up in Myrtle Beach, Sc and went to Coastal Carolina Unversity for Biochemistery until 2018 where I moved to Charlotte, NC and decided to become a bar manager. Where I also had a pop-up bar in Charlotte at the Discovery Place</p>
                                 <p class="card-text"><small class="text-muted"></small></p>
                             </div>
                         </div>
