--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
 
 <body>
   <div></div>
-  <nav class="navbar navbar-expand-lg navbar-dark text-white bg-dark">
+  <nav class="navbar mr-auto navbar-expand-lg navbar-dark text-white bg-dark">
     <a class="navbar-brand" href="#">
       <img src="C:\Users\mrcas\Pictures\Photoshop\Hello there.gif" width="30" height="30"
         class="d-inline-block align-top" alt="" loading="lazy">
@@ -25,7 +25,7 @@
     </button>
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
+      <ul class="navbar-nav ">
         <li class="nav-item ">
           <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
         </li>
