--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>Your's Truly</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
     integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-  <link rel="stylesheet" href="scss/custom.scss">
+  <link rel="stylesheet" href="scss/style.css">
 </head>
 
 <body>
