--- a/Memes.html
+++ b/Memes.html
@@ -8,7 +8,7 @@
     <title>Your's Truly</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    <link rel="stylesheet" href="scss/custom.scss">
+    <link rel="stylesheet" href="scss/style.css">
 </head>
 
 <body>
@@ -17,7 +17,7 @@
         <a class="navbar-brand" href="#">
             <img src="C:\Users\mrcas\Pictures\Photoshop\Hello there.gif" width="30" height="30"
                 class="d-inline-block align-top" alt="" loading="lazy">
-            Hello There
+           Mr.C
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -29,12 +29,7 @@
                 <li class="nav-item">
                     <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="contact.html">Contact</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="aboutme.html">AboutMe</a>
-                </li>
+               
                 <li class="nav-item ">
                     <a class="nav-link" href="portfolio.html">Portfolio</a>
                 </li>
