--- a/portfolio.html
+++ b/portfolio.html
@@ -8,7 +8,7 @@
   <title>Your's Truly</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
     integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-  <link rel="stylesheet" href="scss/custom.scss">
+ 
 </head>
 
 <body>
@@ -17,7 +17,7 @@
     <a class="navbar-brand" href="#">
       <img src="C:\Users\mrcas\Pictures\Photoshop\Hello there.gif" width="30" height="30"
         class="d-inline-block align-top" alt="" loading="lazy">
-      Hello There
+      Mr.C
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -27,16 +27,19 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item">
-          <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="index.html">Home </a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="contact.html">Contact</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="aboutme.html">AboutMe</a>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">AboutMe</a>
+          <div class="dropdown-menu">
+            <a class="dropdown-item" href="aboutme.html">Biography</a>
+            <a class="dropdown-item" href="#">Another a</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="contact.html">Contact info</a>
+          </div>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" href="portfolio.html">Portfolio</a>
+          <a class="nav-link" href="portfolio.html">Portfolio<span class="sr-only">(current)</span></a>
         </li>
 
       </ul>
