--- a/contact.html
+++ b/contact.html
@@ -33,8 +33,8 @@
           <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true"
             aria-expanded="false">AboutMe</a>
           <div class="dropdown-menu">
-            <a class="dropdown-item" href="aboutme.html"></a>
-            <a class="dropdown-item" href="#"></a>
+            <a class="dropdown-item" href="aboutme.html">Biography</a>
+            <a class="dropdown-item" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">FreeCode</a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="contact.html">Contact info</a>
           </div>
