--- a/Memes.html
+++ b/Memes.html
@@ -29,7 +29,15 @@
                 <li class="nav-item">
                     <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
                 </li>
-               
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">AboutMe</a>
+                    <div class="dropdown-menu">
+                      <a class="dropdown-item" href="aboutme.html">Biography</a>
+                      <a class="dropdown-item" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">FreeCode</a>
+                      <div class="dropdown-divider"></div>
+                      <a class="dropdown-item" href="contact.html">Contact info</a>
+                    </div>
+                  </li>
                 <li class="nav-item ">
                     <a class="nav-link" href="portfolio.html">Portfolio</a>
                 </li>
