--- a/Memes.html
+++ b/Memes.html
@@ -8,16 +8,36 @@
     <title>Your's Truly</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    <link rel="stylesheet" href="scss/style.css">
+    <link rel="stylesheet" href="scss/meme.css">
 </head>
 
 <body>
-    <div></div>
+
+    <video autoplay muted loop id="myVideo">
+        <source src="C:\Users\mrcas\Pictures\Photoshop\Meme.mov" type="video/mp4">
+    </video>
+    <div class="content">
+        <button type="button" class="btn btn-primary btn-link text-white">Home</button>
+    </div>
+    <script>
+        var video = document.getElementById("myVideo");
+        var btn = document.getElementById("myBtn");
+        function myFunction() {
+            if (video.paused) {
+                video.play();
+                btn.innerHTML = "Pause";
+            } else {
+                video.pause();
+                btn.innerHTML = "Play";
+            }
+        }
+    </script>
+
     <nav class="navbar navbar-expand-lg navbar-dark text-white bg-dark">
         <a class="navbar-brand" href="#">
             <img src="C:\Users\mrcas\Pictures\Photoshop\Hello there.gif" width="30" height="30"
                 class="d-inline-block align-top" alt="" loading="lazy">
-           Mr.C
+            Mr.C
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -30,14 +50,15 @@
                     <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">AboutMe</a>
+                    <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button"
+                        aria-haspopup="true" aria-expanded="false">AboutMe</a>
                     <div class="dropdown-menu">
-                      <a class="dropdown-item" href="aboutme.html">Biography</a>
-                      <a class="dropdown-item" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">FreeCode</a>
-                      <div class="dropdown-divider"></div>
-                      <a class="dropdown-item" href="contact.html">Contact info</a>
+                        <a class="dropdown-item" href="aboutme.html">Biography</a>
+                        <a class="dropdown-item" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">FreeCode</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="contact.html">Contact info</a>
                     </div>
-                  </li>
+                </li>
                 <li class="nav-item ">
                     <a class="nav-link" href="portfolio.html">Portfolio</a>
                 </li>
@@ -70,6 +91,7 @@
             </a>
         </div>
     </div>
+
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
         integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
         crossorigin="anonymous"></script>
