--- a/contact.html
+++ b/contact.html
@@ -42,11 +42,24 @@
         <li class="nav-item">
           <a class="nav-link" href="portfolio.html">Portfolio</a>
         </li>
-
       </ul>
     </div>
-    </div>
   </nav>
+
+  <div class="container">
+    <div class="row">
+      <div class="col align-self-start"><a href="mailto:mrcaspento@gmail.com">Email Us</a>  
+      
+      </div>
+      <div class="col align-self-center">
+        One of three columns
+      </div>
+      <div class="col align-self-end">
+        One of three columns
+      </div>
+    </div>
+  </div>
+  
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
     integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
     crossorigin="anonymous"></script>
