--- a/aboutme.html
+++ b/aboutme.html
@@ -16,7 +16,7 @@
         <a class="navbar-brand" href="#">
             <img src="C:\Users\mrcas\Pictures\Photoshop\Hello there.gif" width="30" height="30"
                 class="d-inline-block align-top" alt="" loading="lazy">
-           Mr.C
+            Mr.C
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -29,14 +29,15 @@
                     <a class="nav-link" href="index.html">Home</a>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">AboutMe</a>
+                    <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button"
+                        aria-haspopup="true" aria-expanded="false">AboutMe</a>
                     <div class="dropdown-menu">
-                      <a class="dropdown-item" href="aboutme.html">Biography</a>
-                      <a class="dropdown-item" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">FreeCode</a>
-                      <div class="dropdown-divider"></div>
-                      <a class="dropdown-item" href="contact.html">Contact info</a>
+                        <a class="dropdown-item" href="aboutme.html">Biography</a>
+                        <a class="dropdown-item" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">FreeCode</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="contact.html">Contact info</a>
                     </div>
-                  </li>
+                </li>
                 <li class="nav-item">
                     <a class="nav-link" href="portfolio.html">Portfolio</a>
                 </li>
@@ -56,7 +57,12 @@
                         <div class="col-md-8">
                             <div class="card-body">
                                 <h5 class="card-title">Matthew Caspento</h5>
-                                <p class="card-text">Born in Newark, NJ in 1994.I lived there for 5 years before my parents decided to move my twin sister and me to South Carolina looking for a better life, or avoid paying higher taxes. Grew up in Myrtle Beach, Sc and went to Coastal Carolina Unversity for Biochemistery until 2018 where I moved to Charlotte, NC and decided to become a bar manager. Where I also had a pop-up bar in Charlotte at the Discovery Place</p>
+                                <p class="card-text">Born in Newark, NJ in 1994.I lived there for 5 years before my
+                                    parents decided to move my twin sister and me to South Carolina looking for a better
+                                    life, or avoid paying higher taxes. Grew up in Myrtle Beach, Sc and went to Coastal
+                                    Carolina Unversity for Biochemistery until 2018 where I moved to Charlotte, NC and
+                                    decided to become a bar manager. Where I also had a pop-up bar in Charlotte at the
+                                    Discovery Place</p>
                                 <p class="card-text"><small class="text-muted"></small></p>
                             </div>
                         </div>
@@ -64,22 +70,23 @@
                 </div>
 
                 <div class="col-md-3">
-                  <h2>Accolades</h2>
-                  <ul>
-                      <li>Crowned Best person to have your back in a Brawl vs. Bears with Knifes </li>
-                      <li>"200" upvotes on a reddit post</li>
-                      <li>Has not died yet</li>
-                      <li>Spent 6 years in college</li>
-                      <li>Bought a 3 peice-sectional couch</li>
-                  </ul> 
-                  
+                    <h2>Accolades</h2>
+                    <ul>
+                        <li>Crowned Best person to have your back in a Brawl vs. Bears with Knifes </li>
+                        <li>"200" upvotes on a reddit post</li>
+                        <li>Has not died yet</li>
+                        <li>Spent 6 years in college</li>
+                        <li>Bought a 3 peice-sectional couch</li>
+                    </ul>
                 </div>
                 <section id="contact-info">
                     <h2>Contact Info</h2>
                     <ul>
                         <li><strong>Email:</strong> <a href="Mrcaspento@gmail.com">Mrcaspento@gmail.com</a></li>
-                        <li><strong>Github:</strong> <a href="https://mrcaspento.github.io/">Mrcaspento.github.io</a></li>
-                        <li><strong>Pop-bar link:</strong> <a href="https://qclife.wbtv.com/discovery-place-fishbowl/" class="badge badge-primary">Click here</a></li>
+                        <li><strong>Github:</strong> <a href="https://mrcaspento.github.io/">Mrcaspento.github.io</a>
+                        </li>
+                        <li><strong>Pop-bar link:</strong> <a href="https://qclife.wbtv.com/discovery-place-fishbowl/"
+                                class="badge badge-primary">Click here</a></li>
                     </ul>
                 </section>
 
