--- a/Memes.html
+++ b/Memes.html
@@ -33,7 +33,7 @@
         }
     </script>
 
-    <nav class="navbar navbar-expand-lg navbar-dark text-white bg-dark">
+    <nav class="navbar fixed-top navbar-expand-lg navbar-dark text-white bg-dark">
         <a class="navbar-brand" href="#">
             <img src="C:\Users\mrcas\Pictures\Photoshop\Hello there.gif" width="30" height="30"
                 class="d-inline-block align-top" alt="" loading="lazy">
