labeling sections of code

--- a/aboutme.html
+++ b/aboutme.html
@@ -13,7 +13,7 @@
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark container-fluid">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand font-weight-bolder" href="#">
             <img src="C:\Users\mrcas\Pictures\Photoshop\Hello there.gif" width="30" height="30"
                 class="d-inline-block align-top" alt="" loading="lazy">
             Mr.C
@@ -28,7 +28,7 @@
                 <li class="nav-item">
                     <a class="nav-link" href="index.html">Home</a>
                 </li>
-                <li class="nav-item dropdown">
+                <li class="nav-item active dropdown">
                     <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button"
                         aria-haspopup="true" aria-expanded="false">AboutMe</a>
                     <div class="dropdown-menu">
@@ -77,19 +77,11 @@
                         <li>Has not died yet</li>
                         <li>Spent 6 years in college</li>
                         <li>Bought a 3 peice-sectional couch</li>
+                        <li><strong>Pop-bar link:</strong> <a href="https://qclife.wbtv.com/discovery-place-fishbowl/"
+                  class="badge badge-primary">Click here</a></li>
                     </ul>
                 </div>
-                <section id="contact-info">
-                    <h2>Contact Info</h2>
-                    <ul>
-                        <li><strong>Email:</strong> <a href="Mrcaspento@gmail.com">Mrcaspento@gmail.com</a></li>
-                        <li><strong>Github:</strong> <a href="https://mrcaspento.github.io/">Mrcaspento.github.io</a>
-                        </li>
-                        <li><strong>Pop-bar link:</strong> <a href="https://qclife.wbtv.com/discovery-place-fishbowl/"
-                                class="badge badge-primary">Click here</a></li>
-                    </ul>
-                </section>
-
+               
             </div>
         </div>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
