--- a/portfolio.html
+++ b/portfolio.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
+<head><!--links-->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <title>Your's Truly</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
     integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
- 
+  <link rel="stylesheet" href="scss/style.css">
 </head>
 
 <body>
-  <div></div>
+  <!--"Nav" Closes the entire nav-bar so its easier to read-->
   <nav class="navbar navbar-expand-lg navbar-dark text-white bg-dark">
     <a class="navbar-brand" href="#">
       <img src="C:\Users\mrcas\Pictures\Photoshop\Hello there.gif" width="30" height="30"
@@ -30,7 +30,8 @@
           <a class="nav-link" href="index.html">Home </a>
         </li>
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">AboutMe</a>
+          <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true"
+            aria-expanded="false">AboutMe</a>
           <div class="dropdown-menu">
             <a class="dropdown-item" href="aboutme.html">Biography</a>
             <a class="dropdown-item" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">FreeCode</a>
@@ -44,8 +45,10 @@
 
       </ul>
     </div>
-    </div>
+    
   </nav>
+  <!--"Bootstrap-Scripts-->
+ <div>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
     integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
     crossorigin="anonymous"></script>
@@ -56,10 +59,13 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"
     integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
     crossorigin="anonymous"></script>
-    <div class="sticky-footer">
-        <h2>Made with Bootstrap</h2>
-        <p>
-            &copy; 2020 Meme Maker, Inc.
-        </p>
-    </div>
+ </div>  
+ <!--Footer Below-->
+  <div class="sticky-footer">
+    <h2>Made with Bootstrap</h2>
+    <p>
+      &copy; 2020 Meme Maker, Inc.
+    </p>
+  </div>
 </body>
+</html>
