--- a/portfolio.html
+++ b/portfolio.html
@@ -47,6 +47,24 @@
     </div>
     
   </nav>
+  <!--Portfolio Container-->
+  <div class="container">
+        <div class="row">Portfolio</h1>
+          <div class="col-sm">
+            one of two
+          </div>
+          <div class="col-sm">
+            one of two
+          </div>
+          <div class="col-sm">
+            one of two
+          </div>
+          <div class="col-sm">
+            one of two
+          </div>
+        </div>
+        <div></div>
+  </div>
   <!--"Bootstrap-Scripts-->
  <div>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
