--- a/aboutme.html
+++ b/aboutme.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-
+<!--links-->
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+    <!--"Nav" closes the navbar script-->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark container-fluid">
         <a class="navbar-brand font-weight-bolder" href="#">
             <img src="C:\Users\mrcas\Pictures\Photoshop\Hello there.gif" width="30" height="30"
@@ -44,7 +45,7 @@
 
         </div>
     </nav>
-    <div class="container-fluid">
+    <div class="container">
         <div class="container">
 
             <h1 class="row">Biography</h1>
