--- a/contact.html
+++ b/contact.html
@@ -55,13 +55,12 @@
           <section id="contact-info">
             <h2>Contact Info</h2>
             <ul>
-                <li><strong>Email:</strong> <a href="Mrcaspento@gmail.com">Mrcaspento@gmail.com</a></li>
-                <li><strong>Github:</strong> <a href="https://mrcaspento.github.io/">Mrcaspento.github.io</a>
-                </li>
-                <li><strong>Pop-bar link:</strong> <a href="https://qclife.wbtv.com/discovery-place-fishbowl/"
-                        class="badge badge-primary">Click here</a></li>
+              <li><strong>Email:</strong> <a href="mailto:Mrcaspento@gmail.com">Mrcaspento@gmail.com</a></li>
+              <li><strong>Github:</strong> <a href="https://mrcaspento.github.io/">Mrcaspento.github.io</a>
+              </li>
+              <li><strong>Twiter:</strong> <a href="https://twitter.com/UnusualCaspento">UnusualCaspento</a></li>
             </ul>
-        </section>
+          </section>
           <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
         </div>
       </div>
@@ -70,16 +69,16 @@
 
 
 
-      <a href="mailto:mrcaspento@gmail.com">Email Me</a>
-         
-      <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-        crossorigin="anonymous"></script>
-      <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-        crossorigin="anonymous"></script>
+  <a href="mailto:mrcaspento@gmail.com">Email Me</a>
 
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"
-        integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
-        crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+    integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+    crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+    crossorigin="anonymous"></script>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"
+    integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
+    crossorigin="anonymous"></script>
 </body>
