--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
   <title>Your's Truly</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
     integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    <link rel="stylesheet" href="scss/style.css">
+  <link rel="stylesheet" href="scss/style.css">
 </head>
 
 <body>
-  
+  <!---"Nav" closes the nav bar scrpit-->
   <nav class="navbar navbar-expand-lg navbar-dark text-white bg-dark ">
     <a class="navbar-brand" href="#">
       <img src="C:\Users\mrcas\Pictures\Photoshop\Hello there.gif" width="30" height="30"
@@ -30,7 +30,8 @@
           <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">AboutMe</a>
+          <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true"
+            aria-expanded="false">AboutMe</a>
           <div class="dropdown-menu">
             <a class="dropdown-item" href="aboutme.html">Biography</a>
             <a class="dropdown-item" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">FreeCode</a>
@@ -38,7 +39,7 @@
             <a class="dropdown-item" href="contact.html">Contact info</a>
           </div>
         </li>
-      
+
         <li class="nav-item">
           <a class="nav-link" href="portfolio.html">Portfolio</a>
         </li>
@@ -46,20 +47,18 @@
     </div>
     </div>
   </nav>
-<div class ="row">
-  <div class="jumbotron jumbotron">
-    <div class="container-fluid">
+  <div class="row">
+    <div class="jumbotron">
+
       <h1 class="display-4">Hello, world!</h1>
       <p class="lead">This is my work in progress website where I upload my class projects and the occasional meme</p>
       <hr class="my-4">
       <p>For the Juicy Memes.</p>
       <a class="btn btn-primary btn-md" href="Memes.html" role="button">Memes</a>
+
     </div>
   </div>
 
-
-</div>
- 
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
     integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
     crossorigin="anonymous"></script>
