--- a/aboutme.html
+++ b/aboutme.html
@@ -46,9 +46,9 @@
         </div>
     </nav>
     <div class="container">
-        <div class="container">
+        <div class="container bg-light">
 
-            <h1 class="row">Biography</h1>
+            <h1 class="row bg-light">Biography</h1>
             <div class="row">
                 <div class="card mb-3" style="max-width: 540px;">
                     <div class="row no-gutters">
@@ -70,7 +70,7 @@
                     </div>
                 </div>
 
-                <div class="col-md-3">
+                <div class="col-md-3 bg-light">
                     <h2>Accolades</h2>
                     <ul>
                         <li>Crowned Best person to have your back in a Brawl vs. Bears with Knifes </li>
@@ -96,7 +96,7 @@
             integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
             crossorigin="anonymous"></script>
 
-        <div class="sticky-footer">
+        <div class="sticky-footer bg-light">
             <h2>Made with Bootstrap</h2>
             <p>
                 &copy; 2020 Meme Maker, Inc.
