Fixed images couldnt fix bg-vid

--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
   <div></div>
   <nav class="navbar mr-auto navbar-expand-lg navbar-dark text-white bg-dark">
     <a class="navbar-brand" href="#">
-      <img src="C:\Users\mrcas\Pictures\Photoshop\Hello there.gif" width="30" height="30"
+      <img src="https://mrcaspento.github.io/PictureGarden/Pictures/Hello_there.gif" width="30" height="30"
         class="d-inline-block align-top" alt="" loading="lazy">
       Mr.C
     </a>
@@ -48,7 +48,7 @@
   <div class="card mb-3" style="max-width: 540px;">
     <div class="row no-gutters">
       <div class="col-md-4">
-        <img src="#" class="card-img" alt="...">
+        <img src="https://mrcaspento.github.io/PictureGarden/Pictures/Hello_there.gif" class="card-img" alt="...">
       </div>
       <div class="col-md-8">
         <div class="card-body">
