--- a/Memes.html
+++ b/Memes.html
@@ -33,7 +33,7 @@
 
     <nav class="navbar fixed-top navbar-expand-lg navbar-dark text-white bg-dark">
         <a class="navbar-brand" href="#">
-            <img src="#" width="30" height="30"
+            <img src="https://mrcaspento.github.io/PictureGarden/Pictures/Hello_there.gif" width="30" height="30"
                 class="d-inline-block align-top" alt="" loading="lazy">
             Mr.C
         </a>
@@ -67,16 +67,16 @@
         <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="#" class="d-block w-100" alt="...">
+                    <img src="https://mrcaspento.github.io/PictureGarden/Pictures/meme_1.png" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                    <img src="#" class="d-block w-100" alt="...">
+                    <img src="https://mrcaspento.github.io/PictureGarden/Pictures/meme_2.png" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                    <img src="#" class="d-block w-100" alt="...">
+                    <img src="https://mrcaspento.github.io/PictureGarden/Pictures/meme_3.png" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                    <img src="#" class="d-block w-100" alt="...">
+                    <img src="https://mrcaspento.github.io/PictureGarden/Pictures/meme_2.png" class="d-block w-100" alt="...">
                 </div>
             </div>
             <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
