--- a/aboutme.html
+++ b/aboutme.html
@@ -15,7 +15,7 @@
     <!--"Nav" closes the navbar script-->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark container-fluid">
         <a class="navbar-brand font-weight-bolder" href="#">
-            <img src="#" width="30" height="30"
+            <img src="https://mrcaspento.github.io/PictureGarden/Pictures/Hello_there.gif" width="30" height="30"
                 class="d-inline-block align-top" alt="" loading="lazy">
             Mr.C
         </a>
