--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <!---"Nav" closes the nav bar scrpit-->
   <nav class="navbar navbar-expand-lg navbar-dark text-white bg-dark ">
     <a class="navbar-brand" href="#">
-      <img src="C:\Users\mrcas\Pictures\Photoshop\Hello there.gif" width="30" height="30"
+      <img src="https://mrcaspento.github.io/PictureGarden/Pictures/Hello_there.gif" width="30" height="30"
         class="#" alt="" loading="lazy">
       Mr.C
     </a>
