--- a/portfolio.html
+++ b/portfolio.html
@@ -16,7 +16,7 @@
   <!--"Nav" Closes the entire nav-bar so its easier to read-->
   <nav class="navbar navbar-expand-lg navbar-dark text-white bg-dark">
     <a class="navbar-brand" href="#">
-      <img src="C:\Users\mrcas\Pictures\Photoshop\Hello there.gif" width="30" height="30"
+      <img src="https://mrcaspento.github.io/PictureGarden/Pictures/Hello_there.gif" width="30" height="30"
         class="d-inline-block align-top" alt="" loading="lazy">
       Mr.C
     </a>
@@ -56,7 +56,7 @@
     <div class="row justify-content-md-center"> 
       <div class="col">
         <div class="card" style="width: 18rem;">
-          <img src="#" class="card-img-top" alt="...">
+          <img src="https://mrcaspento.github.io/PictureGarden/Pictures/Me&Sophia.png" class="card-img-top" alt="...">
           <div class="card-body">
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
           </div>
